(fix): fix scrollbar colors in dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -31,15 +31,15 @@
 
 @media (prefers-color-scheme: dark) {
   * {
-    scrollbar-color: #3f3f46 #71717a;
+    scrollbar-color: #a3a3a3 #525252;
   }
 
   *::-webkit-scrollbar-thumb, *::-webkit-scrollbar-thumb:hover {
-    background-color: #3f3f46;
+    background-color: #a3a3a3;
   }
 
   *::-webkit-scrollbar, *::-webkit-scrollbar-corner, *::-webkit-scrollbar-track {
-    background-color: #71717a;
+    background-color: #525252;
   }
 }
 
